// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM fgxDDw"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 2`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM dSYVDM"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 3`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM gpdbnf"
  >
    Hello world
  </button>
</DocumentFragment>
`;
